Added Datetime to View Past Orders and masked old password

--- a/templates/changepasswordform.html
+++ b/templates/changepasswordform.html
@@ -18,7 +18,7 @@
         <div>
             Old password
         </div>
-        <input type="text" name="oldpassword"></input>
+        <input type="password" name="oldpassword"></input>
         <div>
             New Password
         </div>
